Fix horizontal scrolling

--- a/src/views/GoTV/StreamCard.styl
+++ b/src/views/GoTV/StreamCard.styl
@@ -24,6 +24,7 @@
     border-radius: 8px
     transition: transform 0.3s, box-shadow 0.3s
     background-color: var(--shade3)
+    box-sizing: border-box
 
     &:hover
         transform: scale(1.05)
